--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,8 @@
       <li>
         <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
         <%= link_to "プロフィール編集", edit_customer_registration_path %>
+        <%= link_to "わたし", customers_my_page_path %>
+        <%= link_to "みんな", root_path %>
       </li>
     <% else %>
       <li>
