--- a/app/views/public/travel_details/new.html.erb
+++ b/app/views/public/travel_details/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @travel_detail do |f|%>
+<%= form_with model: [@travel,@travel_detail] do |f|%>
 
 <%= f.date_field :travel_date %><br />
 <%= f.text_field :travel_title_detail%><br />
