--- a/app/views/public/travels/new.html.erb
+++ b/app/views/public/travels/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model:@travel do |f|%>
+<%= form_with model: @travel do |f|%>
 
 <%= f.date_field :travel_start %>から<%= f.date_field :travel_finish %><br />
 <%= f.text_field :travel_title%><br />
@@ -8,11 +8,12 @@
 
 
 
-<% @travel_details.each do |travel_detail| %>
-<%= travel_detail.travel_date %>
-<%= travel_detail.start_time %>〜<%= travel_detail.finish_time %>
-<%= travel_detail.travel_title_detail %>
-<%= travel_detail.memo %><br />
-<%end%>
+<%# @travel_details.each do |travel_detail| %>
+<%#= travel_detail.travel_date %>
+<%#= travel_detail.start_time %><%#= travel_detail.finish_time %>
+<%#= travel_detail.travel_title_detail %>
+<%#= travel_detail.memo %>
+<%#= link_to "削除", travel_travel_detail_path(@travel,travel_detail), method: :delete, "data-confirm" => "本当に削除しますか？" %><br />
+<%#end%>
 
-<%= link_to "＋",new_travel_detail_path%>
+<%#= link_to "＋",new_travel_travel_detail_path(@travel,travel_detail)%>
