--- a/app/views/public/travels/show.html.erb
+++ b/app/views/public/travels/show.html.erb
@@ -1,3 +1,4 @@
+<%= image_tag @travel.get_image%>
 <%= @travel.travel_start%>から<%= @travel.travel_finish%><br>
 <%= @travel.travel_title%><br>
 <%= @travel.destination_i18n %><br>
