[update]フォロー一覧、フォロワー一覧ページへの遷移機能

--- a/app/views/public/customers/mypage.html.erb
+++ b/app/views/public/customers/mypage.html.erb
@@ -4,8 +4,8 @@
 <%= @customer.account%>
 <p>いいね一覧</p>
 <p>投稿</p>
-<p>フォロワー中</p>
-<p>フォロワー</p>
+<%= link_to "フォロー(#{@customer.followings.count})", followings_customer_path(@customer), class: "nav-link" %>
+<%= link_to "フォロワー(#{@customer.followers.count})", followers_customer_path(@customer), class: "nav-link" %>
 <%#= render 'public/follows/follow_button', customer: @customer %>
 
 <%= link_to "＋",new_travel_path%><br>
