--- a/app/views/public/travels/index.html.erb
+++ b/app/views/public/travels/index.html.erb
@@ -1,9 +1,28 @@
 <% @travels.each do |travel|%>
   <%= link_to customer_path(travel.customer_id) do %>
-    <%= image_tag travel.get_image%>
+    <%= image_tag travel.customer.get_profile_image(100,100)%>
   <% end %>
   <%= travel.customer.account%>
   <%= travel.travel_start%>
   <%= travel.travel_finish%>
-  <%= travel.travel_title%>
+  <%= link_to travel_path(travel) do %>
+    <%= travel.travel_title%>
+  <%end%><br>
+    <%= image_tag travel.get_image(300,300)%><br>
+
+    <% if travel.good_by?(current_customer) %>
+    <p>
+      <%= link_to travel_goods_path(travel), method: :delete do %>
+        ♥<%= travel.goods.count %> いいね
+      <% end %>
+    </p>
+    <% else %>
+    <p>
+      <%= link_to travel_goods_path(travel), method: :post do %>
+        ♡<%= travel.goods.count %> いいね
+      <% end %>
+    </p>
+  <% end %>
+
+  <%= link_to "コメント",new_travel_comment_path(travel)%><br>
 <%end%>
