--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,19 +13,15 @@
   <body>
     <header>
     <% if customer_signed_in? %>
-      <li>
-        <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
-        <%= link_to "プロフィール編集", edit_customer_registration_path %>
-        <%= link_to "わたし", customers_my_page_path %>
-        <%= link_to "みんな", root_path %>
-      </li>
+      <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
+      <%= link_to "プロフィール編集", edit_customer_registration_path %>
+      <%= link_to "わたし", customers_my_page_path %>
+      <%= link_to "みんな", root_path %>
     <% else %>
-      <li>
-        <%= link_to "新規登録", new_customer_registration_path %>
-      </li>
-      <li>
-        <%= link_to "ログイン", new_customer_session_path %>
-      </li>
+      <%= link_to new_customer_session_path do%>
+        <%= image_tag 'no_image', size: "50x50" %>
+      <%end%>
+      <%= link_to "みんな", root_path %>
     <% end %>
     </header>
     <%= yield %>
