--- a/app/views/public/relationships/_follow_button.html.erb
+++ b/app/views/public/relationships/_follow_button.html.erb
@@ -1,3 +1,4 @@
+<% if customer_signed_in? %>
 <% unless current_customer == customer %>
  <% if current_customer.following?(customer) %>
    <%= form_for(current_customer.relationships.find_by(follow_id: customer.id), html: { method: :delete }) do |f| %>
@@ -15,3 +16,4 @@
    <% end %>
  <% end %>
 <% end %>
+<%end%>
