--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -19,8 +19,9 @@
       <%= link_to "みんな", root_path %>
     <% else %>
       <%= link_to new_customer_session_path do%>
-        <%= image_tag 'no_image', size: "50x50" %>
+        <%= image_tag 'no_image', size: "50x50" %><br>
       <%end%>
+      <p>ログイン</p>
       <%= link_to "みんな", root_path %>
     <% end %>
     </header>
