--- a/app/views/public/registrations/edit.html.erb
+++ b/app/views/public/registrations/edit.html.erb
@@ -3,7 +3,7 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
 
-  <%= f.file_field :avatar %>
+  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
 
   <div class="field">
     <%= f.label :名前 %>
