--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,42 +1,55 @@
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
+<div class="bg-info">
 
-  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
-
-  <div class="field">
-    <%= f.label :名前 %>
-    <%= f.text_field :name, autofocus: true, autocomplete: "name"  %>
+  <div class="container registration_bg">
+    <div class="row  bg-light">
+      <div class=" mx-auto mt-5">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "public/shared/error_messages", resource: resource %>
+      <table>
+        <tr>
+          <th><%= f.label :名前 %></th>
+          <td><%= f.text_field :name,size:45, autofocus: true, autocomplete: "name"  %></td>
+        </tr>
+        <tr>
+          <th><%= f.label :アカウント名 %></th>
+          <td><%= f.text_field :account,size:45, autofocus: true, autocomplete: "account"  %></td>
+        </tr>
+        <tr>
+          <th><%= f.label :メールアドレス %></th>
+          <td><%= f.email_field :email,size:45, autofocus: true, autocomplete: "email" %></td>
+        </tr>
+        <tr>
+          <th>
+            <%= f.label :パスワード %>
+            <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> 文字以上)</em>
+            <% end %>
+          </th>
+          <td><%= f.password_field :password,size:45, autocomplete: "new-password" %></td>
+        </tr>
+        <tr>
+          <th><%= f.label :パスワード（確認用） %></th>
+          <td><%= f.password_field :password_confirmation,size:45, autocomplete: "new-password" %></td>
+        </tr>
+        <tr>
+          <th><%= f.label :自己紹介文 %></th>
+        </tr>
+        <tr>
+          <th colspan="2"><%= f.text_area :self_introduction,size:"67x7" %></th>
+        </tr>
+      </table>
+      </div>
+    </div>
+    <div class="row bg-light">
+      <div class="mx-auto">
+        <div class="actions">
+        <%= f.submit "新規登録" %>
+        </div>
+      </div>
+    </div>
+      <% end %>
   </div>
+</div>
 
-  <div class="field">
-    <%= f.label :アカウント名 %>
-    <%= f.text_field :account, autofocus: true, autocomplete: "account"  %>
-  </div>
 
-  <div class="field">
-    <%= f.label :メールアドレス %>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :パスワード %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> 文字以上)</em>
-    <% end %>
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :パスワード（確認用） %>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :自己紹介文 %><br />
-    <%= f.text_area :self_introduction%>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "新規登録" %>
-  </div>
-<% end %>
