[update]CSSによる背景画像挿入環境設定完了

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
       <%= link_to "みんな", root_path %>
     <% end %>
     </header>
-    <main class="mb-auto my-auto">
+    <main class="mb-auto">
     <%= yield %>
     </main>
     <footer class="bg-dark text-white pt-5 pb-4">
