--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,8 @@
       <%= link_to "みんな", root_path %>
     <% else %>
       <%= link_to new_customer_session_path do%>
-        <%= image_tag 'no_image', size: "50x50" %><br>
+        <%= image_tag 'no_image', size: "50x50" %>
       <%end%>
-      <p>ログイン</p>
       <%= link_to "みんな", root_path %>
     <% end %>
     </header>
