--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,63 +1,32 @@
-<!--<div class="bg-info">-->
-<div class="jumbotron">
+<div class="jumbotron mb-n3">
   <diV class="containers">
-    <div class="col-5 mx-auto mt-5">
-      <div class="card">
-        <div class="row">
-          <div class="mx-auto mt-5 mb-3">
-          <h3 class="bg-silver">新規会員登録</h3>
+    <div class="col-6 mx-auto mt-5">
+      <div class="card signin-card mx-auto">
+        <div class="row mt-5 mb-3  mx-auto ">
+            <h3 class="bg-silver">アカウント登録</h3>
+        </div>
+        <div class="row mx-4">
+          <div class="box">
+            <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= render "public/shared/error_messages", resource: resource %>
+            <%= f.text_field :name,style: "width:100%", autofocus: true, autocomplete: "name", placeholder: "名前を入力",class:"mb-2"%><br>
+            <%= f.text_field :account,style: "width:100%", autofocus: true, autocomplete: "account", placeholder: "アカウント名を入力",class:"mb-2"%><br>
+            <%= f.email_field :email,style: "width:100%", autofocus: true, autocomplete: "email", placeholder: "メールアドレスを入力",class:"mb-2"%><br>
+            <%= f.password_field :password,style: "width:100%", autocomplete: "new-password", placeholder: "パスワードを入力（６文字以上）",class:"mb-2"%><br>
+            <%= f.password_field :password_confirmation,style: "width:100%", autocomplete: "new-password", placeholder: "確認用のパスワードを入力",class:"mb-2"%><br>
+            <%= f.text_area :self_introduction,style: "width:100%",rows: 5, placeholder: "自己紹介文を入力"%>
           </div>
         </div>
-        <div class="row">
-          <div class="mx-auto">
-          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-          <%= render "public/shared/error_messages", resource: resource %>
-          <table>
-            <tr>
-              <th><%= f.label :名前 %></th>
-              <td><%= f.text_field :name,size:45, autofocus: true, autocomplete: "name"  %></td>
-            </tr>
-            <tr>
-              <th><%= f.label :アカウント名 %></th>
-              <td><%= f.text_field :account,size:45, autofocus: true, autocomplete: "account"  %></td>
-            </tr>
-            <tr>
-              <th><%= f.label :メールアドレス %></th>
-              <td><%= f.email_field :email,size:45, autofocus: true, autocomplete: "email" %></td>
-            </tr>
-            <tr>
-              <th>
-                <%= f.label :パスワード %>
-                <% if @minimum_password_length %>
-                  <em>(<%= @minimum_password_length %> 文字以上)</em>
-                <% end %>
-              </th>
-              <td><%= f.password_field :password,size:45, autocomplete: "new-password" %></td>
-            </tr>
-            <tr>
-              <th><%= f.label :パスワード（確認用） %></th>
-              <td><%= f.password_field :password_confirmation,size:45, autocomplete: "new-password" %></td>
-            </tr>
-            <tr>
-              <th><%= f.label :自己紹介文 %></th>
-            </tr>
-            <tr>
-              <th colspan="2"><%= f.text_area :self_introduction,size:"67x7" %></th>
-            </tr>
-          </table>
-          </div>
-        </div>
-        <div class="row">
-          <div class="actions mx-auto mb-5">
-            <%= f.submit "新規登録" %>
-          </div>
+        <div class="row mx-auto mb-3 mt-3">
+          <%= button_tag type: 'submit', class:'btn btn-default' do%>
+            <i class="fas fa-check-circle fa-4x signin-submit"></i>
+          <%end%>
         </div>
           <% end %>
       </div>
     </div>
   </diV>
 </div>
-<!--</div>-->
 
 
 
