--- a/app/views/public/registrations/edit.html.erb
+++ b/app/views/public/registrations/edit.html.erb
@@ -1,51 +1,32 @@
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
-  <div class="field">
-    <%= f.label :名前 %>
-    <%= f.text_field :name, autofocus: true, autocomplete: "name"  %>
-  </div>
-
-  <div class="field">
-    <%= f.label :アカウント名 %>
-    <%= f.text_field :account, autofocus: true, autocomplete: "account"  %>
-  </div>
-
-  <div class="field">
-    <%= f.label :メールアドレス %>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :パスワード %> <i>(leave blank if you don't want to change it)</i>
-    <% if @minimum_password_length %>
-      <em><%= @minimum_password_length %> 文字以上</em>
-    <% end %>
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :パスワード（確認用） %>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i>
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :自己紹介文 %><br />
-    <%= f.text_area :self_introduction%>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "登録" %>
-  </div>
-<% end %>
-
-<%= link_to "　退会する　", unsubscrib_customer_path(current_customer.id),class:"btn btn-danger btn-sm" %></td>
+<div class="jumbotron mb-n3">
+  <diV class="containers">
+    <div class="col-6 mx-auto mt-5">
+      <div class="card signin-card mx-auto">
+        <div class="row mt-5 mb-3  mx-auto ">
+            <h3 class="bg-silver">アカウント編集</h3>
+        </div>
+        <div class="row mx-4">
+          <div class="box">
+            <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= render "public/shared/error_messages", resource: resource %>
+            <%= f.text_field :name,style: "width:100%", autofocus: true, autocomplete: "name", placeholder: "名前を入力",class:"mb-2"%><br>
+            <%= f.text_field :account,style: "width:100%", autofocus: true, autocomplete: "account", placeholder: "アカウント名を入力",class:"mb-2"%><br>
+            <%= f.email_field :email,style: "width:100%", autofocus: true, autocomplete: "email", placeholder: "メールアドレスを入力",class:"mb-2"%><br>
+            <%= f.password_field :password,style: "width:100%", autocomplete: "new-password", placeholder: "パスワードを入力（６文字以上）",class:"mb-2"%><br>
+            <%= f.password_field :password_confirmation,style: "width:100%", autocomplete: "new-password", placeholder: "確認用のパスワードを入力",class:"mb-2"%><br>
+            <%= f.text_area :self_introduction,style: "width:100%",rows: 5, placeholder: "自己紹介文を入力"%>
+          </div>
+        </div>
+        <div class="row mx-auto mb-3 mt-3">
+            <%= button_tag type: 'submit', class:'btn btn-default p-0 mr-3' do%>
+              <i class="fas fa-check-circle fa-4x signin-submit"></i>
+            <%end%>
+          <% end %>
+          <%= link_to unsubscrib_customer_path(current_customer.id), class:'btn btn-default p-0 ml-3' do %>
+            <i class="fas fa-times-circle fa-4x sigout-link"></i>
+          <%end%>
+        </div>
+      </div>
+    </div>
+  </diV>
+</div>
