--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -18,7 +18,7 @@
           </div>
         </div>
         <div class="row mx-auto mb-3 mt-3">
-          <%= button_tag type: 'submit', class:'btn btn-default' do%>
+          <%= button_tag type: 'submit', class:'btn btn-default p-0' do%>
             <i class="fas fa-check-circle fa-4x signin-submit"></i>
           <%end%>
         </div>
