--- a/app/views/public/registrations/edit.html.erb
+++ b/app/views/public/registrations/edit.html.erb
@@ -22,7 +22,7 @@
               <i class="fas fa-check-circle fa-4x signin-submit"></i>
             <%end%>
           <% end %>
-          <%= link_to unsubscrib_customer_path(current_customer.id), class:'btn btn-default p-0 ml-3' do %>
+          <%= link_to customers_my_page_path, class:'btn btn-default p-0 ml-3' do%>
             <i class="fas fa-times-circle fa-4x sigout-link"></i>
           <%end%>
         </div>
