--- a/app/views/public/customers/unsubscrib.html.erb
+++ b/app/views/public/customers/unsubscrib.html.erb
@@ -1,2 +1,2 @@
-<%= link_to "　退会しない　", edit_customer_registration_path(@customer) %>
+<%= link_to "　退会しない　", customers_my_page_path %>
 <%= link_to "　 退会する 　", withdraw_customers_path(@customer), method: :patch,data:{confirm: "退会する"}%>
