--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -18,11 +18,14 @@
           </div>
         </div>
         <div class="row mx-auto mb-3 mt-3">
-          <%= button_tag type: 'submit', class:'btn btn-default p-0' do%>
+          <%= button_tag type: 'submit', class:'btn btn-default p-0 mr-3' do%>
             <i class="fas fa-check-circle fa-4x signin-submit"></i>
           <%end%>
-        </div>
           <% end %>
+          <%= link_to root_path, class:'btn btn-default p-0 ml-3' do%>
+            <i class="fas fa-times-circle fa-4x sigout-link"></i>
+          <%end%>
+        </div>
       </div>
     </div>
   </diV>
