--- a/app/views/public/customers/unsubscrib.html.erb
+++ b/app/views/public/customers/unsubscrib.html.erb
@@ -1,2 +1,9 @@
-<%= link_to "　退会しない　", customers_my_page_path %>
-<%= link_to "　 退会する 　", withdraw_customers_path(@customer), method: :patch,data:{confirm: "退会する"}%>
+<div class="mt-5 complete-bg d-flex flex-column align-items-center  justify-content-center unsubscrib-text">
+  <div class="mb-4"><h3><strong>本当に退会しますか？</strong></h5></div>
+  <div class="mb-2">退会すると、会員登録情報等が閲覧できなくなります。</div>
+  <div class="mb-5">また、これまでの投稿が削除されます。</div>
+  <div>
+    <%= link_to "　退会しない　", customers_my_page_path(@customer),class:"btn btn-primary" %>
+    <%= link_to "　 退会する 　", withdraw_customers_path(@customer), method: :patch,data:{confirm: "退会する"},class:"btn btn-danger ml-5" %>
+  </div>
+</div>
