--- a/app/javascript/stylesheets/background.scss
+++ b/app/javascript/stylesheets/background.scss
@@ -4,3 +4,8 @@
   height: 850px;
 }
 
+.jumbotron2 {
+  background-image: url("..//images/camera-g5a12044b7_1920.jpg");
+  width: 100%;
+  height: 850px;
+}
