--- a/app/views/public/customers/mypage.html.erb
+++ b/app/views/public/customers/mypage.html.erb
@@ -9,7 +9,7 @@
       <div class="row">
         <div class="col-5 clearfix pr-4">
           <%= link_to avatar_customer_path(@customer) do %>
-            <%= image_tag @customer.get_profile_image(100,100),class:"rounded-circle float-right"%>
+            <%= image_tag @customer.get_profile_image(100,100),class:"rounded-circle float-right border"%>
           <% end %>
         </div>
         <div class="col-7 px-0 mt-3 pl-4">
