--- a/app/views/public/travels/show.html.erb
+++ b/app/views/public/travels/show.html.erb
@@ -1,17 +1,37 @@
 
 <div class="row mt-3">
   <div class="col-3 pl-5">
-    <%= image_tag @travel.get_image(250,250)%>
+    <%= image_tag @travel.get_image(300,300),class:"pl-5"%>
   </div>
   <div class="col-6 mt-3">
     <div class="d-flex align-items-center justify-content-center">
       <h4 class="mb-0 border px-3"><%= @travel.travel_start.strftime('%Y年%m月%d日')%></h4><p class="mb-0">から</p><h4 class="mb-0 border px-3"><%= @travel.travel_finish.strftime('%Y年%m月%d日')%></h4>
     </div>
-    <div class="mx-auto mt-3 border travel-show-title">
+    <div class="d-flex justify-content-center mt-3">
+      <h5>〜<%= @travel.destination_i18n %>〜</h5>
+    </div>
+    <div class="mx-auto border travel-show-title">
       <h1 class="d-flex justify-content-center mb-0"><%= @travel.travel_title%></h1>
     </div>
-    <div class="d-flex justify-content-center mt-1">
-      <h5><%= @travel.destination_i18n %></h5>
+    <div class="d-flex align-items-center justify-content-center">
+      <div class="pr-4">
+        <% if customer_signed_in? %>
+          <% if @travel.good_by?(current_customer) %>
+            <%= link_to travel_goods_path(@travel),class:"travel-show-good-comment_decoration", method: :delete do %>
+              <p class="travel-show-good-comment mb-0"><span class="travel-show-span">♥</span> <%= @travel.goods.count %> いいね</p>
+            <% end %>
+          <% else %>
+            <%= link_to travel_goods_path(@travel),class:"travel-show-good-comment_decoration", method: :post do %>
+              <p class="travel-show-good-comment mb-0">♡ <%= @travel.goods.count %> いいね</p>
+            <% end %>
+          <% end %>
+        <%end%>
+      </div>
+      <div class="pl-4">
+        <%= link_to new_travel_comment_path(@travel),class:"travel-show-good-comment_decoration" do%>
+          <p class="travel-show-good-comment mb-0"><i class="far fa-comment"></i>コメント</p>
+        <%end%>
+      </div>
     </div>
   </div>
   <div class="col-3 d-flex flex-row-reverse pr-5">
@@ -25,38 +45,40 @@
   </div>
 </div>
 
+<div class="container mt-5">
+  <div class="row">
+    <table class="table table-striped travel-show-table">
+      <% @travel_details.each do |travel_detail|%>
+        <tr>
+          <td class="travel-show-border py-1">
+            <div class="d-flex align-items-center justify-content-center travel_detail-show-date">
+              <p class="mb-0 pr-3"><%= travel_detail.travel_date.strftime('%m月%d日')%></p>
+              <h5 class="mb-0"><%= travel_detail.start_time.strftime("%H時%M分")%></h5><p class="mb-0">〜</p><h5 class="mb-0 pr-3"><%= travel_detail.finish_time.strftime("%H時%M分")%></h5>
+            </div>
+          </td>
+          <td class="py-1" style="width:70%">
+            <div class="d-flex align-items-center ml-3">
+              <h4 class="mb-0 travel_detail-show-title"><%= travel_detail.travel_title_detail%></h4>
+              <div class="mb-0 border travel_detail-show-memo d-flex align-items-center pl-2" style="line-height: 1.5;"><%= safe_join(travel_detail.memo.split("\n"),tag(:br))%></div>
+              <% if customer_signed_in? %>
+                <% if @travel.customer.id == current_customer.id %>
+                  <div class="d-flex flex-column bd-highlight ml-2">
+                    <%= link_to travel_travel_detail_path(@travel,travel_detail.id),method: :delete, "data-confirm" => "本当に削除しますか？" do %>
+                      <i class="fas fa-times-circle"></i>
+                    <%end%>
+                    <%= link_to edit_travel_travel_detail_path(@travel,travel_detail.id) do%>
+                      <i class="fas fa-minus-circle"></i>
+                    <%end%>
+                  </div>
+                <%end%>
+              <%end%>
+          </div>
+          </td>
+        </tr>
+      <%end%>
+    </table>
+  </div>
+</div>
 
 
 
-<% @travel_details.each do |travel_detail|%>
-  <%= travel_detail.travel_date%>
-  <%= travel_detail.start_time%>
-  <%= travel_detail.finish_time%>
-  <%= travel_detail.travel_title_detail%>
-  <%= travel_detail.memo%>
-  <% if customer_signed_in? %>
-    <% if @travel.customer.id == current_customer.id %>
-      <%= link_to "削除",travel_travel_detail_path(@travel,travel_detail),method: :delete %>
-      <%= link_to "編集",edit_travel_travel_detail_path(@travel,travel_detail)%> <br>
-    <%end%>
-  <%end%>
-<%end%>
-
-
-<% if customer_signed_in? %>
-  <% if @travel.good_by?(current_customer) %>
-    <p>
-      <%= link_to travel_goods_path(@travel), method: :delete do %>
-        ♥<%= @travel.goods.count %> いいね
-      <% end %>
-    </p>
-    <% else %>
-    <p>
-      <%= link_to travel_goods_path(@travel), method: :post do %>
-        ♡<%= @travel.goods.count %> いいね
-      <% end %>
-    </p>
-  <% end %>
-<%end%>
-
-<%= link_to "コメント",new_travel_comment_path(@travel)%><br>
