--- a/app/javascript/stylesheets/bootstrap-custom.css
+++ b/app/javascript/stylesheets/bootstrap-custom.css
@@ -56,9 +56,9 @@
   color: #196989;
 }
 
-.mypage-account{
-  width: 100PX;
-}
+/*.mypage-account{*/
+/*  width: 100PX;*/
+/*}*/
 
 .followings-text{
   color: black;
