--- a/app/views/public/travels/show.html.erb
+++ b/app/views/public/travels/show.html.erb
@@ -1,7 +1,9 @@
 
 <div class="row mt-3">
   <div class="col-3 pl-5">
-    <%= image_tag @travel.get_image(300,300),class:"pl-5"%>
+    <%= link_to bestshot_travel_path(@travel)do%>
+    <%= image_tag @travel.get_image(300,200),class:"pl-5"%>
+    <%end%>
   </div>
   <div class="col-6 mt-3">
     <div class="d-flex align-items-center justify-content-center">
